--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.3",
+    "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
