--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ DB_PASSWORD =rico1234#
 DB_PORT=1234
 PORT=4000
 SECRET_KEY=6PqDVyWKHy
-BASE_URL=http://localhost:4000
-TARGET_URL=http://localhost:3000
+BASE_URL=https://vehicle-rental-rico.herokuapp.com
+TARGET_URL=https://vehicle-rental-rico.vercel.app/
