--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ DB_PORT=1234
 PORT=4000
 SECRET_KEY=6PqDVyWKHy
 BASE_URL=https://vehicle-rental-rico.herokuapp.com
-TARGET_URL=https://vehicle-rental-rico.vercel.app/
+TARGET_URL=https://vehicle-rental-rico.vercel.app
