--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ PORT=4000
 SECRET_KEY=6PqDVyWKHy
 BASE_URL=https://vehicle-rental-rico.herokuapp.com
 TARGET_URL=https://vehicle-rental-rico.vercel.app
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=465
+EMAIL_SECURE=TRUE
+EMAIL_MAILER=ricoxxx007@gmail.com
+EMAIL_PASSWORD=negkatnvjanrpiwm
